--- a/pasteleria.html
+++ b/pasteleria.html
@@ -9,16 +9,16 @@
     <style>
 @import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
+  .bg-custom {
+    background-color: #FFF5E1 !important;
+  }
+
 </style>
 
 </head>
 <body>
 <h1>Pasteleria Mil Sabores</h1>
-<style>
-  .bg-custom {
-    background-color: #FFF5E1 !important;
-  }
-</style>
+
 
 <nav class="navbar navbar-expand-lg bg-custom">
   <div class="container-fluid">
@@ -29,24 +29,25 @@
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Features</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Pricing</a>
+          <a class="nav-link active" aria-current="page" href="#">Inicio</a>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Dropdown link
+            Productos
           </a>
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">Actions</a></li>
+            <li><a class="dropdown-item" href="#">Action</a></li>
             <li><a class="dropdown-item" href="#">Another action</a></li>
             <li><a class="dropdown-item" href="#">Something else here</a></li>
           </ul>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Mis Pedidos</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Contáctanos</a>
+        </li>
+
       </ul>
     </div>
   </div>
