--- a/pasteleria.html
+++ b/pasteleria.html
@@ -15,30 +15,31 @@
 
 </style>
 
+
 </head>
 <body>
 <h1>Pasteleria Mil Sabores</h1>
-
-
 <nav class="navbar navbar-expand-lg bg-custom">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">Navbar</a>
+    <a class="navbar-brand" href="#">Inicio</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
       <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Inicio</a>
-        </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             Productos
           </a>
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">Action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
-            <li><a class="dropdown-item" href="#">Something else here</a></li>
+            <li><a class="dropdown-item" href="#">Tortas Cuadradas</a></li>
+            <li><a class="dropdown-item" href="#">Tortas Circulares</a></li>
+            <li><a class="dropdown-item" href="#">Postres Individuales</a></li>
+            <li><a class="dropdown-item" href="#">Productos Sin Azúcar</a></li>
+            <li><a class="dropdown-item" href="#">Pastelería Tradicional</a></li>
+            <li><a class="dropdown-item" href="#">Productos sin gluten</a></li>
+            <li><a class="dropdown-item" href="#">Productos Vegana</a></li>
+            <li><a class="dropdown-item" href="#">Tortas Especiales</a></li>
           </ul>
         </li>
         <li class="nav-item">
@@ -47,16 +48,60 @@
         <li class="nav-item">
           <a class="nav-link" href="#">Contáctanos</a>
         </li>
-
+        <li class="nav-item">
+          <a class="nav-link" href="#">Nosotros</a>
+        </li>
       </ul>
     </div>
   </div>
 </nav>
 
+<div class="Button-carrito m-3">
+  <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor" class="bi bi-basket-fill" viewBox="0 0 16 16">
+    <path d="M5.071 1.243a.5.5 0 0 1 .858.514L3.383 6h9.234L10.07 1.757a.5.5 0 1 1 .858-.514L13.783 6H15.5a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-.5.5H15v5a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V9H.5a.5.5 0 0 1-.5-.5v-2A.5.5 0 0 1 .5 6h1.717zM3.5 10.5a.5.5 0 1 0-1 0v3a.5.5 0 0 0 1 0zm2.5 0a.5.5 0 1 0-1 0v3a.5.5 0 0 0 1 0zm2.5 0a.5.5 0 1 0-1 0v3a.5.5 0 0 0 1 0zm2.5 0a.5.5 0 1 0-1 0v3a.5.5 0 0 0 1 0zm2.5 0a.5.5 0 1 0-1 0v3a.5.5 0 0 0 1 0z"/>
+  </svg>
+</div>
 
 
-    
+<div class="card mb-3" style="max-width: 80%;">
+  <div class="row g-0">
+    <div class="col-md-4" style="width: 21%;">
+      <img src="https://i.pinimg.com/1200x/3a/71/cf/3a71cf107b5aee4c6a0a687cf0b6fc7e.jpg" class="img-fluid rounded-start" style="object-fit: cover;" alt="Pastelería Mil Sabores">
+    </div>
+    <div class="col-md-8" style="width: auto;">
+      <div class="card-body">
+        <h5 class="card-title">Mil Sabores</h5>
+        <p class="card-text">La Pastelería 1000 Sabores nació hace cinco décadas con el sueño de convertirse en un referente de la repostería chilena. Desde sus inicios, 
+                            <br>se distinguió por combinar recetas tradicionales con innovaciones creativas, ofreciendo productos que rápidamente conquistaron el paladar de sus clientes.
+                            <br>
+                            <br>
+                            Uno de los hitos más importantes en su trayectoria ocurrió en 1995, cuando la pastelería participó en la creación de la torta más grande del mundo, 
+                            <br> un evento que le permitió formar parte del Récord Guinness. Este logro no solo la hizo conocida a nivel nacional, sino que 
+                            <br> también la posicionó como un símbolo de excelencia y orgullo para la repostería chilena.
+                            <br>
+                            <br>
+                            A lo largo de los años, la empresa ha mantenido un fuerte compromiso con la calidad, la tradición y la innovación, adaptándose a las nuevas 
+                            <br>tendencias del mercado. Su propuesta ha sido siempre entregar un producto fresco, con sabores auténticos y elaborados con dedicación artesanal.
+                            <br>
+                            <br>
+                            Hoy, al cumplir 50 años de historia, Pastelería 1000 Sabores celebra su legado y al mismo tiempo mira hacia el futuro. Consciente de los cambios
+                            <br> en los hábitos de consumo y la importancia del comercio digital, la pastelería busca renovar su sistema de ventas online. Su objetivo es ofrecer 
+                            <br>a los clientes una experiencia de compra moderna, ágil y accesible, manteniendo intacta la esencia que la ha acompañado durante medio siglo.
+                            <br>
+                            <br>
+                            De esta manera, Pastelería 1000 Sabores continúa consolidándose como un ícono de la repostería en Chile, 
+                            <br>uniendo tradición y tecnología para seguir endulzando generaciones.</p>
+        <p class="card-text"><small class="text-body-secondary">Actualizado 2025</small></p>
+      </div>
+    </div>
+  </div>
+</div>
 
+<div class="Button-help m-3">
+  <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor" class="bi bi-headset" viewBox="0 0 16 16">
+    <path d="M8 1a5 5 0 0 0-5 5v1h1a1 1 0 0 1 1 1v3a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1V6a6 6 0 1 1 12 0v6a2.5 2.5 0 0 1-2.5 2.5H9.366a1 1 0 0 1-.866.5h-1a1 1 0 1 1 0-2h1a1 1 0 0 1 .866.5H11.5A1.5 1.5 0 0 0 13 12h-1a1 1 0 0 1-1-1V8a1 1 0 0 1 1-1h1V6a5 5 0 0 0-5-5"/>
+  </svg>
+</div> 
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
 </html>
