cambio de colors
se cambio color de la tarjeta al color que se pide

--- a/pasteleria.html
+++ b/pasteleria.html
@@ -62,8 +62,8 @@
 </div>
 
 
-<div class="card mb-3" style="max-width: 80%;">
-  <div class="row g-0">
+<div class="card mb-3" style="max-width: 75%;">
+  <div class="row-g-0">
     <div class="col-md-4" style="width: 21%;">
       <img src="https://i.pinimg.com/1200x/3a/71/cf/3a71cf107b5aee4c6a0a687cf0b6fc7e.jpg" class="img-fluid rounded-start" style="object-fit: cover;" alt="Pastelería Mil Sabores">
     </div>
