--- a/pasteleria.html
+++ b/pasteleria.html
@@ -72,7 +72,7 @@
       <p class="card-text"> Deliciosa torta de chocolate con capas de ganache 
         <br>y un toque de avellanas personalizable con mensajes especiales. </p>
         <p class="precio fw-bold">Precio: $50.000 CLP </p>
-      <a href="#" class="btn btn-primary" style="background-color: #5d4037; border-color: #5d4037;">Agregar al carrito</a>
+      <a href="#" class="btn btn-primary agregar-carrito" style="background-color: #5d4037; border-color: #5d4037;">Agregar al carrito</a>
     </div>
   </div>
 
@@ -84,7 +84,7 @@
       <p class="card-text">Una mezcla de frutas frescas y crema chantilly 
         <br>sobre un suave bizcocho de vainilla ideal para celebraciones.</p>
         <p class="precio fw-bold">Precio: $45.000 CLP</p>
-      <a href="#" class="btn btn-primary" style="background-color: #5d4037; border-color: #5d4037;">Agregar al carrito</a>
+      <a href="#" class="btn btn-primary agregar-carrito" style="background-color: #5d4037; border-color: #5d4037;">Agregar al carrito</a>
     </div>
   </div>
 
@@ -97,7 +97,7 @@
         <br>
         <br> </p>
         <p class="precio fw-bold">Precio: $40.000 CLP </p>
-      <a href="#" class="btn btn-primary" style="background-color: #5d4037; border-color: #5d4037;">Agregar al carrito</a>
+      <a href="#" class="btn btn-primary agregar-carrito" style="background-color: #5d4037; border-color: #5d4037;">Agregar al carrito</a>
     </div>
   </div>
 
@@ -111,7 +111,7 @@
         <br> 
         <br>
         <p class="precio fw-bold">Precio: $42.000 CLP </p>  
-      <a href="#" class="btn btn-primary" style="background-color: #5d4037; border-color: #5d4037;">Agregar al carrito</a>
+      <a href="#" class="btn btn-primary agregar-carrito" style="background-color: #5d4037; border-color: #5d4037;">Agregar al carrito</a>
     </div>
   </div>
 
@@ -125,7 +125,7 @@
         <br>
      </p>
      <p class="precio fw-bold">Precio: $5.000 CLP </p>
-      <a href="#" class="btn btn-primary" style="background-color: #5d4037; border-color: #5d4037;">Agregar al carrito</a>
+      <a href="#" class="btn btn-primary agregar-carrito" style="background-color: #5d4037; border-color: #5d4037;">Agregar al carrito</a>
     </div>
   </div>
 </div>
