--- a/pasteleria.html
+++ b/pasteleria.html
@@ -51,6 +51,12 @@
         <li class="nav-item">
           <a class="nav-link" href="#">Nosotros</a>
         </li>
+        <li class="nav-item">
+        <a class="nav-link btn btn-outline-primary" href="registro.html">Registro</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="login.html">Iniciar Sesión</a>
+        </li>
       </ul>
     </div>
   </div>
